--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -16,24 +16,33 @@
       
       
       <div class="col-md-6">
-      <p class="fs-3">Laptop</p>
+      <p class="fs-3">[[${product.title}]]</p>
       
       <p>
-      <span class="fw-bold"> Description ; </span><br>Hp Laptop,
-      2566b SSD
+      <span class="fw-bold"> Description ; </span><br>[[${product.description}]]
       </p>
       
       <p>
-        <span class="fw-boid"> Product Details: </span><br>Status :
-        <span class="badge bg-success">Available</span>
-        <span class="badge bg-warning">out of stock</span><br>Category 
-        : Laptop<br> Policy : 7 Days Replacement & Return
+        <span class="fw-boid"> Product Details: </span><br>
+        Status :
+        <th:block th:if="${product.stock>0}">
+         <span class="badge bg-success">Available</span>
+        </th:block>
+       
+       <th:block th:unless="${product.stock>0}">
+      <span class="badge bg-warning">out of stock</span>       
+     </th:block>
+       
+       
+        
+        <br>Category :[[${product.category}]]<br> 
+        Policy : 7 Days Replacement & Return
       </p>
         
         <p class="fs-5 fw-bold">
          price :&nbsp; &nbsp; &nbsp; &nbsp; <i class="fas fa-rupee-sign"></i>
-         70000 <span class="fs-6 text-decoration-line-through text-secondary">5000</span>
-        <span class="fs-6 text-success">50% off</span>
+         [[${product.discountPrice}]] <span class="fs-6 text-decoration-line-through text-secondary">[[${product.price}]]</span>
+        <span class="fs-6 text-success">[[${product.discount}]]% off</span>
         
         </p>
       
@@ -54,7 +63,15 @@
        </div>
     </div>
     
+    <th:block th:if="${product.stock>0}">
     <a href="login.jsp" class="btn btn-danger col-md-12"> Add to card</a>
+    </th:block>
+    
+     <th:block th:unless="${product.stock>0}">
+    <a href="#" class="btn text-white btn-warning col-md-12"> out of stock</a>
+    </th:block>
+    
+    
       </div>
     
      </div>
