--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -51,7 +51,7 @@
     	<div class="col-md-3" th:each="p:${products}">
 			<div class="card">
 				<div class="card-body">
-					<img alt="" th:src="@{'/img/product_img/ +${p.image}}" width="100%" height="150px">
+					<img  th:src="@{'/img/product_img/' +${p.image}}" width="100%" height="150px">
 							<p class="fs-5 text-center">[[${p.title}]]</p>
 								<div class="row text-center">
 									<p class="fs-6 fw-bold">
